# binwheels-neovim

./: .gitignore  Makefile  README.md  download_macos.py  download_win.py  hatch_build.py  pyproject.toml
.github/workflows/: build-wheels.yml
neovim_pyinstaller/: __init__.py  main.py
