[project]
name = "binwheels-neovim"
version = "0.11.4"  # IMPORTANT: Will be overwritten at runtime by GitHub Actions workflow
description = "Cross-platform Neovim installation via Python packaging"
readme = "README.md"
license = {text = "Apache-2.0"}

authors = [
    {name = "Mike Wilkerson", email = "wilkystyle@gmail.com"}
]

keywords = ["neovim", "vim", "editor", "text-editor"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors",
]

requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "build",
    "packaging",
]

[project.urls]
Repository = "https://github.com/wilkystyle/binwheels-neovim"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["."]

[tool.hatch.build.targets.wheel]
ignore-vcs = true  # Don't obey .gitignore, as we want to include ignored files in the wheel
include = ["binwheels_neovim/"]
artifacts = ["binwheels_neovim/install/**/*"]

# Needed for platform-specific wheel tags. Hooks are defined inside hatch_build.py
[tool.hatch.build.targets.wheel.hooks.custom]

[project.scripts]
nvim = "binwheels_neovim.main:launch_neovim"

[tool.ruff.lint]
# Enable all `pydocstyle` rules, limiting to those that adhere to the
# Google convention via `convention = "google"`, below.
select = [
  "F",    # Enable pyflakes
  "D",    # Enable pydocstyle
  "W",    # Enable pycodestyle warnings
  "E",    # Enable pycodestyle errors
  "C90",  # Enable mccabe (complexity) warnings
  "N",    # Enable pep8 naming warnings
  "B",    # Enable flake8 bugbear
  "I",    # Enable isort warnings
]

extend-ignore = [
  "E501",  # Ignore line length warnings.
  "D202",  # Don't complain about blank line after docstring.
  "D203",  # Do NOT require a line between `class` and the class docstring.
  "D213",  # Multi-line summary should NOT start at the second line.
]

[tool.ruff.lint.pydocstyle]
convention = "google"
